[Y26W2-198] feat: 여행 보드 목록 조회 시, nickname 반환되도록 수정